# recursion-schemes-examples

./: README.md  recursion-schemes-examples.cabal
lib/: DataTypes.hs  Histoparamorphisms.hs  Hylomorphisms.hs  Parahistomorphisms.hs
lib/Algebras/: CVAlgebra.hs  FAlgebra.hs  FCoAlgebra.hs
lib/Anamorphisms/: List.hs
lib/Catamorphisms/: List.hs  Natural.hs  Tree.hs
lib/Histomorphisms/: List.hs  Natural.hs
